Fix avatar aspect ratio on tablet screen size (#865)

--- a/src/components/pages/CommunityPage/CommunityPage.module.css
+++ b/src/components/pages/CommunityPage/CommunityPage.module.css
@@ -427,6 +427,7 @@
   height: 48px;
   border-radius: 50%;
   display: block;
+  max-width: unset;
 }
 .CommunityMembersMemberName{
   padding: 0.75rem;
@@ -492,6 +493,7 @@
     border: 1px solid var(--gray-3-);
     border-radius: 0.75rem;
     display: flex;
+    height: 100%;
   }
   .CommunityMembersMember:hover > div{
     border: 1px solid var(--gray-1-);
